envoy-gateway/ssl-to-ssl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend
      containers:
        - name: backend
          image: gcr.io/k8s-staging-gateway-api/echo-basic:v20241113-v1.2.0-37-ge1667203
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: secret-volume
              mountPath: /etc/secret-volume
      volumes:
        - name: secret-volume
          secret:
            secretName: example-cert
            items:
              - key: tls.crt
                path: crt
              - key: tls.key
                path: key
