envoy-gateway/ssl-to-ssl/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
    service: backend
  name: tls-backend
  namespace: default
spec:
  selector:
    app: backend
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
