envoy-gateway/ssl-to-ssl/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: https-gateway
  hostnames:
    - "gateway.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tls-backend
          port: 443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
